# brokers-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_all_services.sh
brokerage_service/: pyproject.toml
brokerage_service/src/: client.py  global_state.py  orders.py  resources.py  server.py
brokerage_service/src/alpaca_api/: resources.py  tools.py
common/: pyproject.toml
common/common_lib/: alpaca_helpers.py  ib.py  mcp.py  util.py
common/common_lib/alpaca_helpers/: env.py
common/common_lib/alpaca_helpers/async_impl/: async_rest.py  news_client.py  stock_client.py  trading_client.py
common/common_lib/alpaca_helpers/simulation/: db.py  trading_client.py
market_data_service/: pyproject.toml
market_data_service/src/: server.py
market_data_service/src/alpaca_api/: market_data.py  news.py  tools.py
market_data_service/src/ibkr/: client.py  global_state.py  news.py  options.py
market_data_service/src/ta/: indicators.py
market_data_service/src/tradestation/: api.py  tools.py
research_service/: pyproject.toml
research_service/src/: scanner.py  server.py
research_service/tradingview/: server.py
src/portfolio_service/: __init__.py  __main__.py  server.py
src/portfolio_service/brokers/: common.py
src/portfolio_service/brokers/ibkr/: __init__.py  client.py  common.py  global_state.py  resources.py  tools.py
src/portfolio_service/brokers/ibkr/tool_types/: market_data.py  news.py  options.py  orders.py
src/portfolio_service/brokers/tradestation/: __init__.py  api.py  resources.py  tools.py
src/portfolio_service/custom_indicators/: ec.py
src/portfolio_service/tradingview/: async_screener.py  column_values_index.py  scanner.py
