[project]
name = "fin-agents-servers"
version = "0.1.0"
description = "A Model Context Protocol server providing market data"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "alpaca-py>=0.35.1",
    "common",
    "yfinance>=0.2.54",
]

[[project.authors]]
name = "Itay Verkh"
email = "itay1542@gmail.com"

[tool.uv.workspace]
members=[
    "brokerage_service",
    "market_data_service",
    "research_service",
    "common",
]

[tool.uv.sources]
common = { workspace = true }
