[project]
name = "brokerage-service"
version = "0.1.0"
description = "A Model Context Protocol server providing IBKR brokerage access"
requires-python = ">=3.10"
dependencies = [
 "common"
]

[[project.authors]]
name = "Itay Verkh"
email = "itay1542@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
brokerage_service = "src.server:main"
