[project]
name = "brokerage_service"
version = "0.1.0"
description = "A Model Context Protocol server providing IBKR brokerage access"
requires-python = ">=3.10"
dependencies = [
 "common"
]

[[project.authors]]
name = "Itay Verkh"
email = "itay1542@gmail.com"

[tool.uv.sources]
common = { workspace = true }
