[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.8",
    "ib-insync>=0.9.86",
    "mcp[cli]>=1.0.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "setuptools>=75.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common_lib"]
