[project]
name = "market-data-service"
version = "0.1.0"
description = "A Model Context Protocol server providing market data"
requires-python = ">=3.10"
dependencies = [
 "mplfinance>=0.12.10b0",
 "pandas-ta>=0.3.14b0",
 "pandas>=2.2.3",
 "retry>=0.9.2",
 "numpy<2.0.0",
 "setuptools>=75.6.0",
 "common"
]

[[project.authors]]
name = "Itay Verkh"
email = "itay1542@gmail.com"

[tool.uv.sources]
common = { workspace = true }
