[project]
name = "research-service"
version = "0.1.0"
description = "A Model Context Protocol server providing research tools"
requires-python = ">=3.10"
dependencies = [
 "tradingview-screener<=2.5.0",
 "common"
]

[[project.authors]]
name = "Itay Verkh"
email = "itay1542@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
server = "src.server:main"
